featur/add image clip(mosaic)

--- a/partials/home.html
+++ b/partials/home.html
@@ -17,4 +17,4 @@
     </div>
 </selector>
 
-<div ng-show="bikes.selectedBike" ng-click="bikes.selectBike(null)" class="full pop-up"><3d-view></3d-view></div>
+<div ng-show="bikes.selectedBike" ng-click="bikes.selectBike(null)" class="full pop-up"><threed-view ng-click="bikes.stop($event)"></threed-view></div>
